# algo

./: CMakeLists.txt
algo/: geometry.hpp  matrix.hpp  modular.hpp  num.hpp  segment_tree.hpp
examples/: CMakeLists.txt  io.cpp  numth.cpp  sequence.cpp  sort.cpp  trie.cpp
include/algo/: debug.hpp  io.hpp  numth.hpp  segment_tree.hpp  sequence.hpp  sort.hpp  trie.hpp
src/: CMakeLists.txt  numth.cpp
tests/: CMakeLists.txt  test.cpp
